# neocredivault

./: .gitignore  package-lock.json  package.json
app/: root.tsx
app/components/UI/Snackbar/: Snackbar.tsx
app/helpers/: crypto.ts
app/indexedDB/: db.ts
app/routes/: index.tsx
vault/: Cargo.toml
vault/src/: actors.rs  db_models.rs  db_utils.rs  insertables.rs  main.rs  messages.rs  schema.rs  services.rs
