[package]
name = "vault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-web = "4.3.1"
chrono = "0.4.22"
serde = { version = "1.0.152", features = ["derive"] }
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"